# shared-lib-test

./: Makefile.am  configure.ac
src/: Makefile.am  mockup.c  target.c
test/: Makefile.am  test_dlopen.c
